objects/Toll_Free_Number__c/Toll_Free_Number__c.object-meta.xml
<CustomObject>
    <label>Toll Free Number</label>
    <nameField>
        <displayFormat>TF-{00000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Toll Free Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>