objects/Toll_Free_Number__c/fields/Ring_to_Number__c.field-meta.xml
<CustomField>
    <fullName>Ring_to_Number__c</fullName>
    <label>Ring to Number</label>
    <type>Phone</type>
</CustomField>