objects/Toll_Free_Number__c/fields/Technical_Information__c.field-meta.xml
<CustomField>
    <fullName>Technical_Information__c</fullName>
    <label>Technical Information</label>
    <referenceTo>Technical_Information__c</referenceTo>
    <relationshipLabel>Toll Free Numbers</relationshipLabel>
    <relationshipName>Toll_Free_Numbers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>