objects/Toll_Free_Number__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Toll-Free Number</fullName>
            </value>
            <value>
                <fullName>Existing Toll-Free Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>