objects/Toll_Free_Number__c/fields/X8XX_555_5555_Number__c.field-meta.xml
<CustomField>
    <fullName>X8XX_555_5555_Number__c</fullName>
    <label>8XX-555-5555 Number</label>
    <type>Phone</type>
</CustomField>